--- a/EPG3380/index.html
+++ b/EPG3380/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Grayscale - Start Bootstrap Theme</title>
+        <title>Consultora</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -28,7 +28,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Quienes somos</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#myv">Misión y Visión</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#productos">Productos</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Equipo</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
                     </ul>
@@ -44,7 +45,7 @@
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Solutions</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">En un océano de datos, nosotros seleccionamos y convertimos estos en información.</h2>
-                    <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
+                    <a class="btn btn-primary js-scroll-trigger" href="#about">Comencemos</a>
                 </div>
             </div>
 		</div>
@@ -55,16 +56,14 @@
 		
         <!-- About-->
         <section class="about-section text-center" id="about">
-            <div class="container">
-                <div class="row">
+            <div class="container">    
                     <div class="col-lg-8 mx-auto">
+					<div class="row">
 					<div>
                         <h2 class="text-white mb-4">Quienes somos</h2>
                         <p class="text">
 						<h7>
-                            Un equipo comprometido, con pasión por resolver problemas mediante la tecnología, innovando para construir soluciones disruptivas y diferenciadoras en toda industria.
-                            <a href="https://startbootstrap.com/theme/grayscale/">the preview page</a>
-                            . The theme is open source, and you can use it for any purpose, personal or commercial.
+                            Somos un equipo multidisciplinario enfocados en la excelencia, comprometidos por entregar soluciones innovadoras.
                         </h7>
 					    </p>
                     </div>
@@ -72,26 +71,32 @@
             </div>
         </section>
         <!-- Projects-->
-        <section class="projects-section bg-light" id="projects">
-            <div class="container">
+        <section class="projects-section bg-light" id="myv">
+           <div class="container">
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="" /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <h4>Nuestra Misión</h4>
+                            <p class="text-black-50 mb-0">Es otorgar las mejores soluciones a los problemas que enfrentan nuestros clientes.</p>
+                        </div>
+						<div class="featured-text text-center text-lg-left">
+                            <h4>Nuestra Visión</h4>
+                            <p class="text-black-50 mb-0">Es ser siempre una consultora de excelencia con soluciones a la vanguardia en ciencia y tecnología.</p>
                         </div>
                     </div>
                 </div>
+		</section>		
+		        <section class="projects-section bg-light" id="productos">
+            <div class="container">
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0"></>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-tarjeta text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">DSC (Data Science Consulting)</h4>
-                                    <p class="mb-0 text-white-50">Desarrollo de modelos para problemas con datos</p>
+                                    <h4 class="text-white">Advanced Analytics Research</h4>
+                                    <p class="mb-0 text-white-50">Desarrollamos investigaciones exhaustivas de alta rigurosidad estadística y matemática, otorgado po un equipo técnico y académico con amplios conocimientos multidisciplinarios.</p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
@@ -101,8 +106,8 @@
                         <div class="bg-success text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">ARC (Advanced Research Consulting)</h4>
-                                    <p class="mb-0 text-white-50">Investigación detallada de un problema e informe de resultados.</p>
+                                    <h4 class="text-white">Business Intelligence Visualization </h4>
+                                    <p class="mb-0 text-white-50">Creación de reportes en tiempo real,  integrando flujos de altos volúmenes de datos facilitando la gestión de procesos mediante aplicaciones en la nube.</p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
@@ -110,41 +115,34 @@
                     </div>
                 </div>
                 <!-- Project Two Row-->
-                <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="" /></div>
+				<div class="row justify-content-center no-gutters  mb-5 mb-lg-0"></>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-tarjeta1 text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">DSC (Data Science Consulting)</h4>
-                                    <p class="mb-0 text-white-50">Desarrollo de modelos para problemas con datos</p>
+                                    <h4 class="text-white">Data Science Modelling</h4>
+                                    <p class="mb-0 text-white-50">Desarrollo de modelos de ML/DL de aprendizaje supervisado y no-supervisado, eficientes y efectivos, compuestos por algoritmos en estado del arte.</p>
+                                    <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>  
+                    <div class="col-lg-6">
+                        <div class="bg-tarjeta text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">Data Science Integration</h4>
+                                    <p class="mb-0 text-white-50">Puesta en producción y automatización de DSM en ecosistemas de nube y On-Premise, cumpliendo con principios de CI/CD para la persistencia del producto.</p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+				</div>
+			</div>
         </section>
-		<!--Equipo-->
-        <section class="about-section text-center" id="team">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-					<div>
-                        <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-                        <p class="text-white-50">
-                            Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-                            <a href="https://startbootstrap.com/theme/grayscale/">the preview page</a>
-                            . The theme is open source, and you can use it for any purpose, personal or commercial.
-                        </p>
-                    </div>
-                </div>
-                <img class="img-fluid" src="assets/img/" alt="" />
-            </div>
-        </section>
-		
-		
+	
         <!-- Signup-->
         <section class="signup-section" id="team">
             <div class="container">
@@ -156,7 +154,7 @@
                                 <h4 class="text-uppercase m-3">Mauricio Mirada</h4>
 								<div class="small text-black-50 mb-3">Senior Partner</div>
                                 <hr class="my-3" />
-                                <div class="small text-black-50 mb-3">MBA MIT</div>
+                                <div class="small text-black-50 mb-3">MBA MIT, 15 años en Consultoría Estratégica</div>
 								<div class="social d-flex justify-content-center">
 									<a class="mx-2" href="#!"><i class="fab fa-linkedin"></i></a>
 									<a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
@@ -172,7 +170,7 @@
                                 <h4 class="text-uppercase m-3">Jesús Mascaró</h4>
 								<div class="small text-black-50 mb-3">Tech Lead</div>
                                 <hr class="my-3" />
-                                <div class="small text-black-50 mb-3">Tech Lead</div>
+                                <div class="small text-black-50 mb-3">Msc. CS Michigan, Ex-Google & Ex-Facebook</div>
 								<div class="social d-flex justify-content-center">
 									<a class="mx-2" href="#!"><i class="fab fa-linkedin"></i></a>
 									<a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
@@ -188,7 +186,7 @@
                                 <h4 class="text-uppercase m-3">Macarena Bolados</h4>
 								<div class="small text-black-50 mb-3">KAM</div>
                                 <hr class="my-3" />
-                                <div class="small text-black-50 mb-3">Licenciada en Administraci'on de Empresas</div>
+                                <div class="small text-black-50 mb-3">MBA Stanford, Msc. Estadística, 7 años en BCG</div>
 								<div class="social d-flex justify-content-center">
 									<a class="mx-2" href="#!"><i class="fab fa-linkedin"></i></a>
 									<a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
@@ -205,7 +203,7 @@
                                 <h4 class="text-uppercase m-3">Carlos Castro</h4>
 								<div class="small text-black-50 mb-3">Research Specialist</div>
                                 <hr class="my-3" />
-                               <div class="small text-black-50 mb-3">Lorem ipsum lorem ipsum lorem ipsum</div>
+                               <div class="small text-black-50 mb-3">Phd. Mat. École Polytechnique, Experto en Riesgo Financiero</div>
 								<div class="social d-flex justify-content-center">
 									<a class="mx-2" href="#!"><i class="fab fa-linkedin"></i></a>
 									<a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
@@ -217,11 +215,11 @@
                     <div class="col-md-4 mb-3 mb-md-0">
                         <div class="card h-100">
                             <div class="card-body text-center">
-							<img class="img-fluid mb-3 mb-lg-0" src="assets/img/NN.png" alt="" />
+							<img class="img-fluid mb-3 mb-lg-0" src="assets/img/FP.png" alt="" />
                                 <h4 class="text-uppercase m-3">Francisca Palacios</h4>
 								<div class="small text-black-50 mb-3">Senior Data Scientist</div>
                                 <hr class="my-3" />
-                               <div class="small text-black-50 mb-3">Licenciada en Física, PhD. en Estadística</div>
+                               <div class="small text-black-50 mb-3">PHD. Economía HKUST, Investigadora Banco Mundial</div>
 								<div class="social d-flex justify-content-center">
 									<a class="mx-2" href="#!"><i class="fab fa-linkedin"></i></a>
 									<a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
@@ -237,7 +235,7 @@
                                 <h4 class="text-uppercase m-3">Vicente Carrasco</h4>
 								<div class="small text-black-50 mb-3">Solutions Architect</div>
                                 <hr class="my-3" />
-                               <div class="small text-black-50 mb-3">Ingeniero en lorem ipsum</div>
+                               <div class="small text-black-50 mb-3">AWS/Azure/GCP Full Certificate, Ex-Google Data Center Lead</div>
 								<div class="social d-flex justify-content-center">
 									<a class="mx-2" href="#!"><i class="fab fa-linkedin"></i></a>
 									<a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
@@ -289,3 +287,4 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
+
